[gd_scene load_steps=19 format=3 uid="uid://0qwy7ejm4p2r"]

[ext_resource type="PackedScene" uid="uid://c5lbqx8a61pyi" path="res://main/actor/actor.tscn" id="1_niu7q"]
[ext_resource type="Texture2D" uid="uid://x3e8lonyrtgd" path="res://main/assets/sprites/circle.png" id="2_mpgev"]
[ext_resource type="Material" uid="uid://wavqql72q6up" path="res://main/actor/daemon/tentacle_material_daemon.tres" id="2_r8hq3"]
[ext_resource type="Script" path="res://main/actor/daemon/daemon.gd" id="2_upoli"]
[ext_resource type="Texture2D" uid="uid://b1iiiey1nto1t" path="res://main/assets/sprites/rectangle.png" id="3_aatdq"]
[ext_resource type="AudioStream" uid="uid://co2tl7k717wks" path="res://main/actor/daemon/scream.ogg" id="6_dc3x0"]
[ext_resource type="AudioStream" uid="uid://cv82eogyapie5" path="res://main/actor/daemon/hurt.ogg" id="7_5fus5"]
[ext_resource type="AudioStream" uid="uid://ds5gdksfso1n" path="res://main/actor/human/impact.ogg" id="8_2ej8d"]

[sub_resource type="Curve" id="Curve_vpvu7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_jeb0k"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jjs1a"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dvgtk"]
radius = 128.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sbjnn"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("7_5fus5")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mqw5o"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("8_2ej8d")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_bs6fr"]
resource_name = "hurt"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreamPlayer2:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder/Sprite2D:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.07, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteHolder/Sprite2D:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.07, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:tentacle_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32.0, 16.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteHolder/Blood:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScreamPlayer3:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bgl07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreamPlayer2:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder/Sprite2D:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteHolder/Sprite2D:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteHolder/TentacleHolder:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:tentacle_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [16.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScreamPlayer2:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.2]
}

[sub_resource type="Animation" id="Animation_qww8n"]
resource_name = "die"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreamPlayer2:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder/Sprite2D:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.07, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.85)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteHolder/Sprite2D:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.07, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:tentacle_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteHolder/Blood:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScreamPlayer3:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ScreamPlayer2:pitch_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.3, 0.6]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpriteHolder/TentacleHolder:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.95),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4vro"]
_data = {
"RESET": SubResource("Animation_bgl07"),
"die": SubResource("Animation_qww8n"),
"hurt": SubResource("Animation_bs6fr")
}

[node name="Daemon" instance=ExtResource("1_niu7q")]
collision_layer = 8
collision_mask = 9
script = ExtResource("2_upoli")
tentacle_speed = 16.0
tentacle_material = ExtResource("2_r8hq3")
max_health = 6.0
speed = 32.0

[node name="Blood" type="CPUParticles2D" parent="SpriteHolder" index="0"]
emitting = false
amount = 40
one_shot = true
speed_scale = 2.0
explosiveness = 0.97
texture = ExtResource("2_mpgev")
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 64.0
initial_velocity_max = 128.0
scale_amount_min = 0.01
scale_amount_max = 0.03
scale_amount_curve = SubResource("Curve_vpvu7")

[node name="TentacleHolder" type="Node2D" parent="SpriteHolder" index="1"]
unique_name_in_owner = true
rotation = 0.678933

[node name="Tentacle" type="Sprite2D" parent="SpriteHolder/TentacleHolder" index="0"]
material = ExtResource("2_r8hq3")
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_aatdq")

[node name="Tentacle2" type="Sprite2D" parent="SpriteHolder/TentacleHolder" index="1"]
material = ExtResource("2_r8hq3")
rotation = 1.5708
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_aatdq")

[node name="Sprite2D" parent="SpriteHolder" index="2"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_mpgev")

[node name="EyeLeft" type="Sprite2D" parent="SpriteHolder/Sprite2D" index="0"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(-20, -10)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_mpgev")

[node name="EyeRight" type="Sprite2D" parent="SpriteHolder/Sprite2D" index="1"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(20, -10)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_mpgev")

[node name="Mouth" type="Sprite2D" parent="SpriteHolder/Sprite2D" index="2"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, 20)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_mpgev")

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_jeb0k")

[node name="HurtArea2D" parent="." index="3"]
collision_mask = 49

[node name="CollisionShape2D" parent="HurtArea2D" index="0"]
shape = SubResource("CircleShape2D_jjs1a")

[node name="DetectionArea2D" type="Area2D" parent="." index="4"]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D" index="0"]
shape = SubResource("CircleShape2D_dvgtk")

[node name="RetargetTimer" type="Timer" parent="." index="5"]
unique_name_in_owner = true
wait_time = 0.4
autostart = true

[node name="ScreamPlayer" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource("6_dc3x0")
volume_db = -20.0
autoplay = true
max_distance = 200.0
attenuation = 2.92817
bus = &"sfx"

[node name="ScreamPlayer2" type="AudioStreamPlayer2D" parent="." index="7"]
stream = SubResource("AudioStreamRandomizer_sbjnn")
volume_db = -12.0
pitch_scale = 1.2
max_distance = 200.0
attenuation = 2.92817
bus = &"sfx"

[node name="ScreamPlayer3" type="AudioStreamPlayer2D" parent="." index="8"]
stream = SubResource("AudioStreamRandomizer_mqw5o")
volume_db = -12.0
pitch_scale = 1.3
max_distance = 200.0
attenuation = 2.92817
bus = &"sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_s4vro")
}
